--- a/index.css
+++ b/index.css
@@ -37,13 +37,13 @@
   --font-size-medium-1: 3.6rem;
   --font-size-large: 5.5rem;
   --font-size-huge: 7.5rem;
-  --font-stack: "Hk Grotesk", sans-serif;
+  --font-stack: "Change One", "Hk Grotesk", sans-serif;
 
   --line-height-normal: 1.7;
   --line-height-small: 1.2;
 
   --black: #000;
-  --pink: #ff3258;
+  --orange: #ff851b;
   --white: #f0e9f2;
   --white-1: #e5e5e6da;
 
@@ -158,7 +158,7 @@ h2::after {
   display: block;
   height: 2px;
   width: 10rem;
-  background: var(--pink);
+  background: var(--orange);
   margin: var(--gutter-small) 0;
 }
 
@@ -212,7 +212,7 @@ p {
   left: 0;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  z-index: 1;
+  z-index: 20;
   pointer-events: none;
 }
 
@@ -234,7 +234,7 @@ a {
 
 button:focus,
 a:focus {
-  outline: 2px solid var(--pink);
+  outline: 2px solid var(--orange);
 }
 
 body:not(.user-is-tabbing) button:focus,
@@ -243,7 +243,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .link:hover {
-  color: var(--pink);
+  color: var(--orange);
 }
 
 .btn {
@@ -252,8 +252,47 @@ body:not(.user-is-tabbing) a:focus {
   padding: 1rem 4.2rem;
   text-decoration: none;
   color: inherit;
-  border: 1px solid var(--pink);
+  border: 1px solid var(--orange);
   font-weight: 400;
+}
+
+#hero-btn {
+  display: flex;
+  flex-direction: row;
+  gap: var(--gutter-medium);
+}
+
+.btn--icon {
+  height: 100%;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+  padding: 1rem 4.2rem;
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid var(--orange);
+  font-weight: 400;
+}
+
+.icon--container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  display: inline;
+  height: 3rem;
+  /* margin-left: var(--gutter-normal); */
+  transition: all 0.3s;
+}
+
+.icon: hover {
+  transform: scale(1.2);
 }
 
 .btn:focus {
@@ -276,20 +315,20 @@ body:not(.user-is-tabbing) a:focus {
 .btn:hover::after,
 .btn:focus::after {
   right: 0;
-  background: var(--pink);
+  background: var(--orange);
 }
 
-.btn--pink {
-  background: var(--pink);
+.btn--orange {
+  background: var(--orange);
   transition: all 0.2s;
 }
 
-.btn--pink::after {
+.btn--orange::after {
   display: none;
 }
 
-.btn--pink:hover,
-.btn--pink:focus {
+.btn--orange:hover,
+.btn--orange:focus {
   background: transparent;
 }
 
@@ -299,7 +338,7 @@ body:not(.user-is-tabbing) a:focus {
   padding: 0.6rem;
   color: inherit;
   text-decoration: none;
-  border-bottom: 1px solid var(--pink);
+  border-bottom: 1px solid var(--orange);
 }
 
 .link__text::after {
@@ -322,7 +361,7 @@ body:not(.user-is-tabbing) a:focus {
 .link__text:hover::after,
 .link__text:focus:after {
   right: 0;
-  background: var(--pink);
+  background: var(--orange);
 }
 
 .link__text span {
@@ -341,7 +380,7 @@ body:not(.user-is-tabbing) a:focus {
   align-items: center;
   height: 5.5rem;
   width: 5.5rem;
-  background-color: var(--pink);
+  background-color: var(--orange);
   border-radius: 50%;
   z-index: 10;
   visibility: hidden;
@@ -423,13 +462,13 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .nav__link:hover {
-  color: var(--pink);
+  color: var(--orange);
 }
 
 .nav__link:hover::after {
   right: 0;
   height: 2px;
-  background: var(--pink);
+  background: var(--orange);
 }
 
 /* --------------------------------------- */
@@ -536,6 +575,10 @@ body:not(.user-is-tabbing) a:focus {
   .work__code {
     height: 4rem;
   }
+
+  .icon {
+    height: 4rem;
+  }
 }
 
 /* --------------------------------------- */
@@ -544,7 +587,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .client__logos {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   filter: invert(100%) grayscale(100%) opacity(0.8);
 }
 
